--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,9 +1,10 @@
 :root {
-  --color-base-background: #111;
-  --color-base-background-lighter: #24242d;
-  --color-base-text: #fff;
-  --color-base-text-lighter: rgba(212, 231, 241, 0.6);
-  --color-border: rgba(115, 125, 130, 0.4);
-  --color-primary-background: #9060ff;
-  --color-primary-text: #b494ff;
+  --color-base-background: #fff;
+  --color-base-background-lighter: #f2f7fa;
+  --color-base-text: #111;
+  --color-base-text-lighter: rgba(0, 0, 0, 0.8);
+  --color-border: rgba(0, 0, 0, 0.8);
+  --color-primary-background:  #33b300;
+  --color-primary-text: #33b300;
+  --color-social-link-background: #111;
 }
