chore(design): change accent color

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,7 @@
   --color-base-text: #111;
   --color-base-text-lighter: rgba(0, 0, 0, 0.8);
   --color-border: rgba(0, 0, 0, 0.8);
-  --color-primary-background:  #33b300;
-  --color-primary-text: #33b300;
+  --color-primary-background:  #111;
+  --color-primary-text: #111;
   --color-social-link-background: #111;
 }
